test/integration/error/err_01_scope_leak.pl0
program scopeLeak;
procedure A();
  var a;
begin 
	a:=1 
end;

procedure B();
begin
  a := 2; { Error: a is local to A }
end;

begin 
	call A(); 
	call B() 
end